--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>Markdown Previewer</title>
     </head>
     <body>
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <div id="root"></div>
         <script type="text/babel" src="./index.js"></script>
     </body>
